Proyecto - Creación de Vector de Salida (y)
Se consiguió crear la forma final de los datos de salida de la red neuronal. Estos se almacenaron en una lista de tuplas, con cada elemento conteniendo información diferente: El primer elemento contiene los valores de salida de la red, el segundo el OHE de la dificultad y el último contiene las timestamps de cada paso.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 Proyecto/DDC Revisited/dataset
 Proyecto/DDC Revisited/tests/data
 Proyecto/DDC Revisited/__pycache__
+Proyecto/Dance Dance Convolution v2
