Proyecto - Ignore Picklefiles con Dataset

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@ Proyecto/DDC Revisited/dataset
 Proyecto/DDC Revisited/tests/data
 Proyecto/DDC Revisited/__pycache__
 Proyecto/Dance Dance Convolution v2
+Proyecto/DDC Revisited/audio_data.pickle
+Proyecto/DDC Revisited/tag_data.pickle
+Parciales
+Proyecto/DDC Revisited/wandb
+Proyecto/DDC Revisited/__pycache__
+Proyecto/DDC Revisited/__pycache__
